--- a/src/App.css
+++ b/src/App.css
@@ -39,14 +39,18 @@
 
 .table-container {
   overflow-x: auto;
-  display: inline-block;
-  width: 100%;
+  display: flex;
+  width: 90%;
+  margin: 4rem;
+  border-radius: 8px;
   overflow-x: auto;
   overflow-y: hidden;
   white-space: nowrap;
   position: relative;
 }
-
+td:last-child {
+  width: auto; 
+}
 table {
   width: 100%; 
   border-collapse: collapse;
@@ -54,12 +58,14 @@ table {
   margin-bottom: 100px;
 }
 
+
  td {
   border: 1px solid #ddd;
-  padding: 40px;
+  padding: 20px;
   height: 100px;
   border: none;
-  min-width: 200px !important;
+  width: 150px;
+  min-width: 150px !important;
 }
 
 th{
@@ -73,7 +79,7 @@ th{
 .sticky {
   position: -webkit-sticky;
   position: sticky;
-  left: 0;
+  left: 0px;
   z-index: 2;
   width: 50px !important;
   background-color: #fff;
@@ -82,7 +88,7 @@ th{
 .stickycard {
   position: -webkit-sticky;
   position: sticky;
-  left: 200px;
+  left: 150px;
   z-index: 1; 
   width: 100px !important;
   background-color: #fff;
@@ -130,5 +136,5 @@ th{
 
 .bg-blue{
   --bs-text-opacity: 1;
-  background-color:#e6e6fa;
+  background-color:rgb(224 242 254);
 }
